# SR3McMod

./: .gitignore  README.md
.github/workflows/: main.yml
BridgeServer/: Bridge.py  requirements.txt
Documentation/: LICENSE  README.md
FabricMod/: build.gradle  settings.gradle
FabricMod/src/main/java/com/project/sr3particles/: BossEntityManager.java  NetworkListener.java  ParticleRenderer.java  SR3ParticleProjection.java
PaperPlugin/: build.gradle  plugin.yml
PaperPlugin/src/main/java/com/project/worldbridge/: ChunkCollector.java  CommandHandler.java  SocketClient.java  WorldStreamer.java
SR3Mod/: CMakeLists.txt  cmakelists.txt
SR3Mod/include/: black_box_spawner.h  camera_streamer.h  input_listener.h  network_client.h  voxel_renderer.h
SR3Mod/src/: black_box_spawner.cpp  camera_streamer.cpp  injector.cpp  input_listener.cpp  network_client.cpp  voxel_renderer.cpp
